--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -41,38 +41,79 @@ body, html{
 }
 
 .media-cards {
-  position: fixed;
-  bottom: 0;
+  position: relative;
   padding: 25px;
+  top: 25px;
+}
+
+#ghcard-dizdonut-1, #easyXDM_IN_Lib_li_gen_1509029633255_0_provider {
+  width: 365px;
+  position: relative !important;
 }
 
 .img-thumbnail {
   height: 200px;
   width: 140px;
-  position: relative;
+  position: fixed;
   float: right;
-  top: -50px;
+  top: 5%;
   right: 15px;
   border-radius: 150px;
 }
 
-#dock li img {
-  display: inline-block;
-  width: 64px;
-  height: 64px;
-  -webkit-box-reflect: below 2px;
-	-webkit-gradient(linear, left top, left bottom, from(transparent),
-		    color-stop(0.7, transparent), to(rgba(255,255,255,.5))); /* reflection is supported by webkit only */
-  -webkit-transition: all 0.3s;
-  -webkit-transform-origin: 50% 100%;
+/*Footer/MAC OS replica styling*/
+
+#dock-container {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  padding-top: 10px;
+  right: 20%;
+  left: 20%;
+  width: 60%;
+  background: rgba(255,255,255,0.2);
+  border-radius: 10px 10px 0 0;
 }
-#dock li:hover img {
+
+#dock-container li {
+  list-style-type: none;
+  display: inline-block;
+  position: relative;
+}
+
+#dock-container li img {
+   width: 64px;
+   height: 64px;
+   border-radius: 50px;
+   -webkit-box-reflect: below 2px
+            -webkit-gradient(linear, left top, left bottom, from(transparent),
+             color-stop(0.7, transparent), to(rgba(255,255,255,.5)));
+   -webkit-transition: all 0.3s;
+   -webkit-transform-origin: 50% 100%;
+ }
+
+#dock-container li:hover img {
   -webkit-transform: scale(2);
   margin: 0 2em;
 }
 
-#dock li:hover + li img,
-#dock li.prev img {
+#dock-container li:hover + li img,
+#dock-container li.prev img {
   -webkit-transform: scale(1.5);
   margin: 0 1.5em;
+}
+
+#dock-container li span {
+  display: none;
+  position: absolute;
+  bottom: 140px;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0,0,0,0.75);
+  padding: 4px 0;
+  border-radius: 12px;
+}
+#dock-container li:hover span {
+  display: block;
+  color: #fff;
 }
