--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,11 +1,26 @@
-
-
 <div id="dock-container">
-  <div id="dock">
-  <ul>
-    <li><a href="http://android.com"><img src="../../assets/images/contact.jpg"/></a></li>
-    <li><a href="http://palm.com"><img src="../../assets/images/github.png"/></a></li>
-  </ul>
-  <div class="base"></div>
-  </div>
+ <div id="dock">
+   <ul>
+     <li>
+       <span>Home</span>
+       <a href="/"><img class="img-rounded" src="../../assets/images/home.png"/></a>
+     </li>
+      <li>
+        <span>About</span>
+        <a href="/about"><img class="img-rounded" src="../../assets/images/profilepic.jpg"/></a>
+      </li>
+      <li>
+        <span>Projects</span>
+        <a href="/projects"><img class="img-rounded" src="../../assets/images/portfolio.jpg"/></a>
+      </li>
+      <li>
+         <span>Resume</span>
+         <a href="/contact"><img class="img-rounded" src="../../assets/images/resume.jpg"/></a>
+      </li>
+      <li>
+         <span>Connect with Me</span>
+         <a href="/contact"><img class="img-rounded" src="../../assets/images/github.png"/></a>
+      </li>
+   </ul>
+ </div>
 </div>
