updates to the portfolio page

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -15,7 +15,7 @@
       </li>
       <li>
          <span>Resume</span>
-         <a href="/contact"><img class="img-rounded" src="../../assets/images/resume.jpg"/></a>
+         <a href="https://docs.google.com/document/d/1Bw5GqNSPB6utMzrTIDvey3MNG55NG6RyXP-DfUUKQCU/edit?usp=sharing" target="_blank"><img class="img-rounded" src="../../assets/images/resume.jpg"/></a>
       </li>
       <li>
          <span>Connect with Me</span>
