--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,14 +36,22 @@ body, html{
 }
 
 .panel-default {
-  opacity: 0.50;
-  margin-top: 15%;
+  opacity: 0.75;
+  padding: 20px;
+  width: 100%;
+  height: auto;
+  margin-bottom: 5%;
 }
 
 .media-cards {
   position: relative;
   padding: 25px;
   top: 25px;
+}
+
+button {
+  text-align: center;
+  width: 100%;
 }
 
 #ghcard-dizdonut-1, #easyXDM_IN_Lib_li_gen_1509029633255_0_provider {
@@ -61,6 +69,21 @@ body, html{
   border-radius: 150px;
 }
 
+.project-panels{
+  word-break: break-all;
+  display: inline-block;
+}
+
+.project-thumbnail {
+  height: 250px;
+  width: 100%;
+}
+
+.modal-title, .panel-heading {
+  text-align: center;
+  font-weight: bolder;
+}
+
 /*Footer/MAC OS replica styling*/
 
 #dock-container {
@@ -68,9 +91,9 @@ body, html{
   bottom: 0;
   text-align: center;
   padding-top: 10px;
-  right: 20%;
-  left: 20%;
-  width: 60%;
+  left: 2%;
+  right: 2%;
+  width: 95%;
   background: rgba(255,255,255,0.2);
   border-radius: 10px 10px 0 0;
 }
