--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -1,2 +1,74 @@
 {{> navbar }}
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-default project-panels">
+        <div class="panel-heading">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#YumYum">BoaBao</button>
+        </div>
+        <div class="panel-body">
+          <img class="project-thumbnail" src="/assets/images/BaoBao.gif" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="panel panel-default project-panels">
+        <div class="panel-heading">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#YumYum">Yum Yum Log</button>
+        </div>
+        <div class="panel-body">
+          <img class="project-thumbnail" src="/assets/images/yumYum.gif" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="panel panel-default project-panels">
+        <div class="panel-heading">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#YumYum">Farmers Market Search</button>
+        </div>
+        <div class="panel-body">
+          <img class="project-thumbnail" src="/assets/images/fms.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="panel panel-default project-panels">
+        <div class="panel-heading">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#YumYum">Node StoreFront</button>
+        </div>
+        <div class="panel-body">
+          <img class="project-thumbnail" src="/assets/images/node.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<!-- Modal -->
+<div id="YumYum" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Yum Yum Log</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 {{> footer }}
