--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -5,7 +5,7 @@
     <div class="col-md-6">
       <div class="panel panel-default project-panels">
         <div class="panel-heading">
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#YumYum">BoaBao</button>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#BaoBao">BaoBao</button>
         </div>
         <div class="panel-body">
           <img class="project-thumbnail" src="/assets/images/BaoBao.gif" alt="">
@@ -27,7 +27,7 @@
     <div class="col-md-6">
       <div class="panel panel-default project-panels">
         <div class="panel-heading">
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#YumYum">Farmers Market Search</button>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Farmers">Farmers Market Search</button>
         </div>
         <div class="panel-body">
           <img class="project-thumbnail" src="/assets/images/fms.png" alt="">
@@ -37,7 +37,7 @@
     <div class="col-md-6">
       <div class="panel panel-default project-panels">
         <div class="panel-heading">
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#YumYum">Node StoreFront</button>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Bamazon">Node StoreFront</button>
         </div>
         <div class="panel-body">
           <img class="project-thumbnail" src="/assets/images/node.png" alt="">
@@ -48,27 +48,6 @@
 </div>
 
 
-
-
-<!-- Modal -->
-<div id="YumYum" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Yum Yum Log</h4>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
+{{> modals}}
 
 {{> footer }}
