--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -8,8 +8,8 @@
   </div>
 
   <div id="ghPlugin">
-    <div class="github-card" data-user="dizdonut"></div>
-    <script src="http://lab.lepture.com/github-cards/widget.js"></script>
+    <div class="github-card" data-user="DizDonut"></div>
+    <script src="https://lab.lepture.com/github-cards/widget.js"></script>
   </div>
 </div>
 
