--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,6 +18,8 @@ body, html{
 h3 {
   padding: 20px;
   text-transform:lowercase;
+  z-index: 100000000;
+  position: relative;
 }
 
 .navbar-default {
@@ -47,15 +49,19 @@ h3 {
   margin-bottom: 5%;
 }
 
-.media-cards {
-  position: relative;
-  padding: 25px;
-  top: 25px;
-}
 
 button {
   text-align: center;
   width: 100%;
+}
+
+.media-card {
+  padding: 100px;
+  position: relative;
+}
+
+.modal-body > p, .modal-body > ul > li, .modal-title {
+  color: black;
 }
 
 #ghcard-dizdonut-1, #easyXDM_IN_Lib_li_gen_1509029633255_0_provider {
@@ -70,6 +76,7 @@ button {
   float: right;
   right: 3%;
   border-radius: 150px;
+  opacity: 0.75;
 }
 
 .project-panels{
