--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,15 +1,19 @@
 {{> navbar}}
 
-
-<div class="media-cards">
-  <div id="linkedInPlugin">
-    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-    <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/michael-bechtel-57538920" data-format="inline" data-related="false"></script>
-  </div>
-
-  <div id="ghPlugin">
-    <div class="github-card" data-user="DizDonut"></div>
-    <script src="https://lab.lepture.com/github-cards/widget.js"></script>
+<div class="container">
+  <div class="row media-card">
+    <div class="col-md-6">
+      <div id="linkedInPlugin">
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/michael-bechtel-57538920" data-format="inline" data-related="false"></script>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div id="ghPlugin">
+        <div class="github-card" data-user="DizDonut"></div>
+          <script src="https://lab.lepture.com/github-cards/widget.js"></script>
+      </div>
+    </div>
   </div>
 </div>
 
