--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -30,7 +30,7 @@
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Farmers">Farmers Market Search</button>
         </div>
         <div class="panel-body">
-          <img class="project-thumbnail" src="/assets/images/fms.png" alt="">
+          <img class="project-thumbnail" src="/assets/images/fms.PNG" alt="">
         </div>
       </div>
     </div>
